# water-billing-bot

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  GITHUB_SETUP.md  LICENSE  MODULE_DOCUMENTATION.md  README.md  lambda-iam-policy.json  pyproject.toml  requirements.txt  setup.py  test_handler.py  water_billing_bot_prd.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
src/: __init__.py  bill_processor.py  lambda_handler.py  similpay_client.py  state_manager.py  telegram_notifier.py  utils.py
tests/: conftest.py  test_bill_processor.py  test_lambda_handler.py  test_similpay_client.py  test_state_manager.py  test_telegram_notifier.py  test_utils.py
